--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 # https://github.com/infusionsoft/engineering-handbook/blob/master/documentation-guidelines/codeowners.md
 
-*     @infusionsoft/sre @infusionsoft/gryffindor 
+*     @infusionsoft/gryffindor 
