--- a/v1/pom.xml
+++ b/v1/pom.xml
@@ -108,6 +108,12 @@
       <artifactId>beam-sdks-java-extensions-json-jackson</artifactId>
       <version>2.10.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20230618</version>
+    </dependency>
+
     <!-- These are used but not declared? -->
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -418,11 +424,15 @@
         </exclusion>
       </exclusions>
     </dependency>
+
+    <!-- Now managing this in the Keap section
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>${json.version}</version>
     </dependency>
+    -->
+
     <dependency>
       <groupId>com.google.auto.value</groupId>
       <artifactId>auto-value</artifactId>
