--- a/plugins/templates-maven-plugin/pom.xml
+++ b/plugins/templates-maven-plugin/pom.xml
@@ -38,7 +38,7 @@
   <properties>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
-    <maven.version>3.3.9</maven.version>
+    <maven.version>3.9.4</maven.version>
     <dataflow.api.version>0.7.6</dataflow.api.version>
     <mojo.executor.version>2.4.0</mojo.executor.version>
   </properties>
@@ -145,7 +145,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>3.6.0</version>
+        <version>3.9.0</version>
         <configuration>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
         </configuration>
@@ -158,9 +158,9 @@
           </execution>
           <execution>
             <id>help-goal</id>
-            <goals>
-              <goal>helpmojo</goal>
-            </goals>
+<!--            <goals>-->
+<!--              <goal>helpmojo</goal>-->
+<!--            </goals>-->
           </execution>
         </executions>
       </plugin>
