PAPI-1895 v2 flagship-events

--- a/v2/pom.xml
+++ b/v2/pom.xml
@@ -724,6 +724,8 @@
         <module>spanner-to-sourcedb</module>
         <module>sqlserver-to-googlecloud</module>
         <module>streaming-data-generator</module>
-    </modules>
+
+        <module>flagship-events</module>
+ </modules>
 
 </project>
