--- a/v2/flagship-events/pom.xml
+++ b/v2/flagship-events/pom.xml
@@ -29,6 +29,9 @@
     <artifactId>flagship-events</artifactId>
 
     <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <java.version>11</java.version>
     </properties>
 
     <dependencies>
